Moved the treemap performance warning to the footer/status bar. Also fixed an issue where the time that the warning was triggered didn't match the time that the warning actually appeared, which led to an apparently very short time for the warning to remain visible.

--- a/codepulse/src/main/resources/toserve/common/desktop.css
+++ b/codepulse/src/main/resources/toserve/common/desktop.css
@@ -75,3 +75,16 @@
 #refresh-link-tooltip a {
 	color: rgb(219, 175, 0);
 }
+
+.vr {
+	border-left: 1px solid;
+	display: inline;
+	margin-right: 5px;
+}
+
+#status-bar {
+	display: inline-block;
+}
+
+#status-bar .status { display: none; }
+#status-bar.slow-treemap .status.status-slow-treemap { display: block; }
